--- a/app/src/main/res/layout/item_crypto_result.xml
+++ b/app/src/main/res/layout/item_crypto_result.xml
@@ -12,6 +12,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/txtSymbol"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
@@ -23,6 +24,7 @@
             android:layout_height="5dp"/>
 
         <TextView
+            android:id="@+id/txtName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Litecion"/>
@@ -38,6 +40,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/txtValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/black"
@@ -49,6 +52,7 @@
             android:layout_height="5dp"/>
 
         <TextView
+            android:id="@+id/txtLastUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2022-01-07T031321"/>
