--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,8 +60,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Calculate"
-            android:onClick="@{viewmodel::onGetCrypto}"/>
+            android:onClick="@{viewmodel::onGetCrypto}"
+            android:text="Calculate" />
 
         <View
             android:layout_width="1dp"
@@ -82,7 +82,6 @@
             android:id="@+id/lytProgressBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone"
             android:gravity="center">
 
             <ProgressBar
@@ -90,22 +89,21 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/txtError"
-            android:gravity="center"
-            android:layout_width="match_parent"
-            android:text="@={viewmodel.error}"
-            android:textColor="@android:color/holo_red_dark"
-            android:layout_height="match_parent"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcyCrypto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:itemCount="5"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="5"
             tools:listitem="@layout/item_crypto_result" />
 
-
+        <TextView
+            android:id="@+id/txtError"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textColor="@android:color/holo_red_dark" />
     </LinearLayout>
 </layout>
